Allow dimension of border width

--- a/CircularImageView/res/values/attrs.xml
+++ b/CircularImageView/res/values/attrs.xml
@@ -3,7 +3,7 @@
 
     <declare-styleable name="CircularImageView">
         <attr name="border" format="boolean"></attr>
-        <attr name="border_width" format="integer"></attr>
+        <attr name="border_width" format="dimension"></attr>
         <attr name="border_color" format="color"></attr>
         <attr name="shadow" format="boolean"></attr>
     </declare-styleable>
