--- a/CircularImageView-Sample/src/main/res/layout/activity_main.xml
+++ b/CircularImageView-Sample/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:orientation="vertical">
 
         <com.mikhaellopez.circularimageview.CircularImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:src="@drawable/image"
             app:border="true"
             app:border_color="@color/colorAccent"
