--- a/CircularImageView-Sample/src/main/res/layout/activity_main.xml
+++ b/CircularImageView-Sample/src/main/res/layout/activity_main.xml
@@ -6,6 +6,13 @@
 
     <include layout="@layout/toolbar" />
 
+    <Button
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scale image"
+        android:onClick="onButtonClicked"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,6 +20,7 @@
         android:orientation="vertical">
 
         <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/circularImage"
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:src="@drawable/image"
