--- a/circularimageview-example/src/main/res/layout/activity_main.xml
+++ b/circularimageview-example/src/main/res/layout/activity_main.xml
@@ -5,18 +5,29 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/circularImageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="@dimen/horizontal_margin"
+        android:layout_marginRight="@dimen/horizontal_margin"
         android:layout_marginTop="50dp"
-        android:src="@drawable/logo"
-        app:border="true"
-        app:border_color="#3f51b5"
-        app:border_width="8dp"
-        app:shadow="true"
-        app:shadow_color="#3f51b5"
-        app:shadow_radius="10" />
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/circularImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo"
+            app:border="true"
+            app:border_color="#3f51b5"
+            app:border_width="8dp"
+            app:shadow="true"
+            app:shadow_color="#3f51b5"
+            app:shadow_radius="10" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="240dp"
@@ -29,8 +40,7 @@
             android:id="@+id/seekBarBorderWidth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:max="30"
+            android:max="40"
             android:progress="11"
             android:progressDrawable="@drawable/scrubber_progress" />
 
@@ -38,8 +48,8 @@
             android:id="@+id/seekBarShadowRadius"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:max="30"
+            android:layout_marginTop="@dimen/margin_top"
+            android:max="40"
             android:progress="8"
             android:progressDrawable="@drawable/scrubber_progress" />
 
@@ -47,7 +57,7 @@
             android:id="@+id/shadeslider"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="@dimen/margin_top" />
 
     </LinearLayout>
 
