--- a/circularimageview-example/src/main/res/layout/activity_main.xml
+++ b/circularimageview-example/src/main/res/layout/activity_main.xml
@@ -20,12 +20,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/logo"
-            app:border="true"
-            app:border_color="#3f51b5"
-            app:border_width="8dp"
-            app:shadow="true"
-            app:shadow_color="#3f51b5"
-            app:shadow_radius="10" />
+            app:civ_border="true"
+            app:civ_border_color="#3f51b5"
+            app:civ_border_width="8dp"
+            app:civ_shadow="true"
+            app:civ_shadow_color="#3f51b5"
+            app:civ_shadow_radius="10" />
 
     </LinearLayout>
 
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="40"
-            android:progress="11"
+            android:progress="8"
             android:progressDrawable="@drawable/scrubber_progress" />
 
         <SeekBar
