Changed attribute names to be less generic to avoid conflicts with other libraries. (eg. instabug)

--- a/circularimageview/src/main/res/values/attrs.xml
+++ b/circularimageview/src/main/res/values/attrs.xml
@@ -2,12 +2,12 @@
 <resources>
 
     <declare-styleable name="CircularImageView">
-        <attr name="civ_border" format="boolean"/>
-        <attr name="civ_border_width" format="dimension"/>
-        <attr name="civ_border_color" format="color"/>
-        <attr name="civ_shadow" format="boolean"/>
-        <attr name="civ_shadow_color" format="color"/>
-        <attr name="civ_shadow_radius" format="float"/>
+        <attr name="lciv_border" format="boolean"/>
+        <attr name="lciv_border_width" format="dimension"/>
+        <attr name="lciv_border_color" format="color"/>
+        <attr name="lciv_shadow" format="boolean"/>
+        <attr name="lciv_shadow_color" format="color"/>
+        <attr name="lciv_shadow_radius" format="float"/>
     </declare-styleable>
 
 </resources>
