Update gradle version / Update compile, target & min sdk Version / Remove allowBackup & supportsRtl on library / Improve sample / Update script to publish on jcenter

--- a/circularimageview-example/src/main/res/layout/activity_main.xml
+++ b/circularimageview-example/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="@dimen/horizontal_margin"
-        android:layout_marginRight="@dimen/horizontal_margin"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:gravity="center"
@@ -48,7 +48,7 @@
             android:id="@+id/seekBarShadowRadius"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginTop="10dp"
             android:max="40"
             android:progress="8"
             android:progressDrawable="@drawable/scrubber_progress" />
@@ -57,7 +57,7 @@
             android:id="@+id/shadeslider"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top" />
+            android:layout_marginTop="10dp" />
 
     </LinearLayout>
 
