--- a/circularimageview-example/src/main/res/values/colors.xml
+++ b/circularimageview-example/src/main/res/values/colors.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- APP DEFAULT -->
-    <color name="colorPrimary">#424242</color>
-    <color name="colorPrimaryDark">#212121</color>
-    <color name="colorAccent">@color/colorPrimary</color>
-    <color name="colorHighlight">#212121</color>
-
+    <color name="primary">#424242</color>
+    <color name="primary_dark">#212121</color>
+    <color name="accent">@color/primary</color>
 </resources>
