--- a/circularimageview/src/main/res/values/attrs.xml
+++ b/circularimageview/src/main/res/values/attrs.xml
@@ -4,6 +4,7 @@
         <attr name="civ_border" format="boolean" />
         <attr name="civ_border_width" format="dimension" />
         <attr name="civ_border_color" format="color" />
+        <attr name="civ_background_color" format="color" />
         <attr name="civ_shadow" format="boolean" />
         <attr name="civ_shadow_color" format="color" />
         <attr name="civ_shadow_radius" format="float" />
