You can now set shadowGravity with `setShadowGravity` method or with `civ_shadow_gravity` (center, top, bottom, start or end)

--- a/circularimageview/src/main/res/values/attrs.xml
+++ b/circularimageview/src/main/res/values/attrs.xml
@@ -8,5 +8,12 @@
         <attr name="civ_shadow" format="boolean" />
         <attr name="civ_shadow_color" format="color" />
         <attr name="civ_shadow_radius" format="float" />
+        <attr name="civ_shadow_gravity">
+            <flag name="center" value="1" />
+            <flag name="top" value="2" />
+            <flag name="bottom" value="3" />
+            <flag name="start" value="4" />
+            <flag name="end" value="5" />
+        </attr>
     </declare-styleable>
 </resources>
