--- a/circularimageview-example/src/main/res/layout/activity_main.xml
+++ b/circularimageview-example/src/main/res/layout/activity_main.xml
@@ -8,9 +8,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
@@ -32,7 +29,7 @@
     <LinearLayout
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
+        android:layout_marginBottom="40dp"
         android:gravity="center"
         android:orientation="vertical">
 
