--- a/circularimageview-example/src/main/res/layout/activity_main.xml
+++ b/circularimageview-example/src/main/res/layout/activity_main.xml
@@ -5,17 +5,16 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_weight="1">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/circularImageView"
             android:layout_width="300dp"
             android:layout_height="300dp"
+            android:layout_gravity="center"
             android:src="@drawable/logo"
             app:civ_border="true"
             app:civ_border_color="#3f51b5"
@@ -24,7 +23,7 @@
             app:civ_shadow_color="#3f51b5"
             app:civ_shadow_radius="10" />
 
-    </LinearLayout>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="240dp"
@@ -51,7 +50,7 @@
             android:progressDrawable="@drawable/scrubber_progress" />
 
         <com.larswerkman.lobsterpicker.sliders.LobsterShadeSlider
-            android:id="@+id/shadeslider"
+            android:id="@+id/shadeSlider"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp" />
