--- a/circularimageview/src/main/res/values/attrs.xml
+++ b/circularimageview/src/main/res/values/attrs.xml
@@ -26,7 +26,7 @@
         <!-- SHADOW -->
         <attr name="civ_shadow" format="boolean" />
         <attr name="civ_shadow_color" format="color" />
-        <attr name="civ_shadow_radius" format="float" />
+        <attr name="civ_shadow_radius" format="dimension" />
         <attr name="civ_shadow_gravity">
             <flag name="center" value="1" />
             <flag name="top" value="2" />
